--- a/assests/css/reponsive.css
+++ b/assests/css/reponsive.css
@@ -1,3 +1,5 @@
+/* Reponsive e chỉ mới làm đc bằng media thôi còn bằng flex e chưa làm được ạ*/
+
 @media (min-width: 723px) and (max-width: 1023px) {
     .container {
         flex-wrap: wrap;
