--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -8,8 +8,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    /* overflow: hidden; */
 }
-
+::-webkit-scrollbar {
+    display: none;
+}
 * {
     box-sizing: border-box;
 }
@@ -41,6 +44,7 @@ body {
     font-size: 36px;
     text-transform: uppercase;
     color: #fff;
+    font-family: "Montserrat", sans-serif;
 }
 
 .img p {
@@ -84,10 +88,12 @@ img {
 }
 
 .title_list ul li {
+    align-items: center;
+    display: flex;
+    justify-content: center;
     font-size: 16px;
     height: 50px;
-    line-height: 50px;
-    font-weight: 600;
+    font-weight: 500;
     color: #7d8c97;
 }
 
@@ -108,6 +114,8 @@ img {
     text-transform: uppercase;
     color: #2196f7;
     cursor: pointer;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
 }
 
 .title_btn.forest button {
