--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -18,16 +18,20 @@ body {
 }
 
 .container {
+    margin-top: 62px;
     display: flex;
+    flex-shrink: 0;
 }
 
 .price-table {
     width: 362px;
-    height: 768px;
+    min-height: 768px;
     background-color: #fff;
     position: relative;
     margin: 0 24px;
     border: 1px solid #fff;
+    display: flex;
+    flex-direction: column;
 }
 
 .img {
@@ -85,6 +89,7 @@ img {
     text-align: center;
     padding-left: 0;
     list-style: none;
+    margin: 0;
 }
 
 .title_list ul li {
@@ -92,9 +97,10 @@ img {
     display: flex;
     justify-content: center;
     font-size: 16px;
-    height: 50px;
+    padding: 25px 0;
     font-weight: 500;
     color: #7d8c97;
+    flex: 1;
 }
 
 .title_list ul li:nth-child(odd) {
@@ -102,8 +108,12 @@ img {
 }
 
 .title_btn {
-    margin-top: 50px;
+    padding: 50px 0;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
 }
 
 .title_btn button {
@@ -115,7 +125,8 @@ img {
     color: #2196f7;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
-    font-weight: 400;
+    font-weight: 300;
+    font-size: 19px;
 }
 
 .title_btn.forest button {
