--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -8,30 +8,27 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* overflow: hidden; */
 }
-::-webkit-scrollbar {
-    display: none;
-}
+
 * {
     box-sizing: border-box;
 }
 
 .container {
-    margin-top: 62px;
     display: flex;
-    flex-shrink: 0;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .price-table {
     width: 362px;
-    min-height: 768px;
     background-color: #fff;
     position: relative;
     margin: 0 24px;
     border: 1px solid #fff;
     display: flex;
     flex-direction: column;
+    margin-top: 62px;
 }
 
 .img {
@@ -97,7 +94,7 @@ img {
     display: flex;
     justify-content: center;
     font-size: 16px;
-    padding: 25px 0;
+    padding: 25px 8px;
     font-weight: 500;
     color: #7d8c97;
     flex: 1;
@@ -156,9 +153,9 @@ img {
 
 .price {
     position: absolute;
-    top: -60px;
-    left: 120px;
-    /* transform: translate(-50%, -50%); */
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 120px;
     height: 120px;
     border-radius: 50%;
